<resources>
    <string name="app_name">IBGM</string>
    <string name="action_settings">Settings</string>
    <string name="activity_contacts_list">Patients List</string>
    <string name="activity_contact_detail">Patient Detail</string>
    <string name="contacts_list_search_results_title">Patients List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Patients Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Patient</string>
    <string name="menu_edit_contact">Edit Patient</string>
    <string name="menu_visit_contact">Visit Data</string>
    <string name="menu_visit_chart">View Chart</string>
    <string name="no_contacts">No Patients Found</string>
    <string name="no_contact_selected">No Patient Selected</string>
    <string name="search_hint">Find Patients</string>
    <string name="chart">EXPORT IMAGE</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="title_activity_add_patient">Add New Patient</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="patient_name">Name</string>
    <string name="patient_age">Age</string>
    <string name="patient_dob">Date of Birth</string>
    <string-array name="patient_gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="patient_state_array">
        <item>Select State</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh </item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Maharashtra</item>
        <item>Madhya Pradesh</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamilnadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="SelectCity">
        <item>Select City</item>
    </string-array>
    <string-array name="Karnataka">
        <item>Bagalkot</item>
        <item>Bangalore</item>
        <item>Belgaum</item>
        <item>Chamarajanagar</item>
        <item>Chitradurga</item>
        <item>Chikkamagaluru</item>
        <item>Davangere</item>
        <item>Dakshina Kannada</item>
        <item>Dharwad</item>
        <item>Gadag</item>
        <item>Hassan</item>
        <item>Haveri</item>
        <item>Hubli</item>
        <item>Kodagu</item>
        <item>Kalaburagi</item>
        <item>Kolar</item>
        <item>Koppal</item>
        <item>Mysore</item>
        <item>Raichur</item>
        <item>Shivamogga</item>
        <item>Tumkur</item>
        <item>Udupi</item>
        <item>Vijayapura</item>
    </string-array>
    <string-array name="Tamilnadu">
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Dharmapuri</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kanchipuram</item>
        <item>Kanyakumari</item>
        <item>Krishnagiri</item>
        <item>Madurai</item>
        <item>Nagapattinam</item>
        <item>Namakkal</item>
        <item>Perambalur</item>
        <item>Ramanathapuram</item>
        <item>Salem</item>
        <item>Tiruchirappalli</item>
    </string-array>
    <string-array name="Kerala">
        <item>Alappuzha</item>
        <item>Ernakulam</item>
        <item>Kasaragod</item>
        <item>Kayamkulam</item>
        <item>Kochi</item>
        <item>Kollam</item>
        <item>Malappuram</item>
        <item>Pathanamthitta</item>
        <item>Thiruvananthapuram</item>
        <item>Wayanad</item>
    </string-array>
    <string-array name="Maharashtra">
        <item>Kolhapur </item>
        <item>Latur</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
        <item>Nagpur</item>
        <item>Nanded</item>
        <item>Nandurbar</item>
        <item>Osmanabad</item>
        <item>Pune</item>
        <item>Raigad</item>
        <item>Ratnagiri</item>
        <item>Sangli</item>
        <item>Satara</item>
        <item>Solapur</item>
        <item>Thane</item>
        <item>Wardha</item>
        <item>Washim</item>
        <item>Yavatmal</item>

    </string-array>
    <string-array name="ArunachalPradesh">
        <item>Anjaw</item>
        <item>Changlang</item>
        <item>East Siang </item>
        <item>East  Kameng</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Subansiri</item>
        <item>Lower DibangValley</item>
        <item>Papumpare</item>
        <item>PapumPare</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
    </string-array>
    <string-array name="AndhraPradesh">
        <item>Anantapur</item>
        <item>East Godavari</item>
        <item>Guntur </item>
        <item>Kadapa</item>
        <item>Kurnool</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Tirupati</item>
        <item>Prakasam</item>
        <item>Vijayawada</item>
        <item>Visakhapatnam</item>
    </string-array>
    <string-array name="Bihar">
        <item>Araria</item>
        <item>Arwal</item>
        <item>Bhagalpur</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>Gaya</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Khagaria</item>
        <item>Madhubani</item>
        <item>Patna</item>
        <item>Samastipur</item>
        <item>Urangabad</item>
    </string-array>
    <string-array name="Chhattisgarh">
        <item>Balrampur</item>
        <item>Balod</item>
        <item>Bemetara</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Gariaband</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Mahasamund</item>
        <item>Narayanpur</item>
        <item>Raipur</item>
        <item>Surajpur</item>
        <item>Sukma</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="Goa">
        <item>Margao</item>
        <item>Panaji</item>
    </string-array>
    <string-array name="Assam">
        <item>Barpeta</item>
        <item>Bongaigaon</item>
        <item>Hailakandi</item>
        <item>Jorhat</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Lakhimpur</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Silchar</item>
        <item>Sivasagar </item>
    </string-array>
    <string-array name="Gujarat">
        <item>Ahmedabad</item>
        <item>Gandhinagar</item>
    </string-array>
    <string-array name="Haryana">
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Faridabad</item>
        <item>Gurgaon</item>
        <item>Gurgaon</item>
        <item>Hisar</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
    </string-array>
    <string-array name="HimachalPradesh">
        <item>Dharamsala</item>
        <item>Shimla</item>
    </string-array>
    <string-array name="Jharkhand">
        <item>Dhanbad</item>
        <item>Ranchi</item>
    </string-array>
    <string-array name="JammuKashmir">
        <item>Leh</item>
        <item>Srinagar/</item>
    </string-array>
    <string-array name="MadhyaPradesh">
        <item>Bhopal</item>
        <item>Indore</item>
    </string-array>
    <string-array name="Manipur">
        <item>Churachandpur</item>
        <item>Imphal</item>
    </string-array>
    <string-array name="Meghalaya">
        <item>Cherrapunji</item>
        <item>Shillong</item>
    </string-array>
    <string-array name="Mizoram">
        <item>Aizawl</item>
        <item>Lunglei</item>
    </string-array>
    <string-array name="Nagaland">
        <item>Dimapur</item>
        <item>Kohima</item>
    </string-array>
    <string-array name="Odisha">
        <item>Bhubaneswar</item>
        <item>Cuttack</item>
    </string-array>
    <string-array name="Rajasthan">
        <item>Jaipur</item>
        <item>Jodhpur</item>
    </string-array>
    <string-array name="Punjab">
        <item>Amritsar</item>
        <item>Jalandhar</item>
    </string-array>
    <string-array name="Sikkim">
        <item>Gangtok</item>
        <item>Namchi</item>
    </string-array>
    <string-array name="Telangana">
        <item>Hyderabad</item>
        <item>Warangal</item>
    </string-array>
    <string-array name="Tripura">
        <item>Agartala</item>
        <item>Udaipur</item>
    </string-array>
    <string-array name="Uttarakhand">
        <item>Dehradun</item>
        <item>Haridwar</item>
    </string-array>
    <string-array name="UttarPradesh">
        <item>Lucknow</item>
        <item>Varanasi</item>
    </string-array>
    <string-array name="WestBengal">
        <item>Durgapur</item>
        <item>Kolkata</item>
    </string-array>
    <string name="title_activity_patient_information">PatientInformation</string>
    <string name="patient_city">City</string>
    <string name="patient_state">State</string>
    <string name="p_visitdate">Visit Date</string>
    <string name="p_height">Patient Height(cm)</string>
    <string name="p_weight">Patient Weight(kg)</string>
    <string name="p_headcircumference">Head Circumference(cm)</string>
    <string name="p_fathername">Father Name</string>
    <string name="p_mothername">Mother Name</string>
    <string name="p_fatherheight">Father Height(cm)</string>
    <string name="p_motherheight">Mother Height(cm)</string>
    <string name="p_age">Age</string>
    <string name="p_midparetnalheight">Mid Paretnal Height(cm)</string>
    <string name="p_bmi">BMI</string>
    <string name="title_chart_list">Charts</string>
    <string name="title_chart_detail">Chart Detail</string>
    <string name="title_activity_charts_main">ChartsMain</string>
    <string name="title_section1">CDC</string>
    <string name="title_section2">Khalidkar</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sponser_novo">Sponsored by</string>
    <string name="txt_novo">Novo Nordisk India Pvt.Ltd</string>
    <string name="skill_work">Designed and Developed by</string>
</resources>