<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goalsr.kidsgrowth.kidsgrowthcharts.ui.CHM_Flash">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Conceptualized and Data provided by"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Dr. Vaman Khadilkar"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <!---->
    <ImageView
        android:id="@+id/img_novo_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/chm_nn_logo"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_novo_logo"
        android:gravity="center"
        android:id="@+id/txt_novo_sponsor"
        android:text="@string/sponser_novo"
        android:textStyle="bold" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_novo_sponsor"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/txt_novo"
        android:textSize="20sp"
        android:text="@string/txt_novo"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skill_work"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_novo"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20sp"
        android:id="@+id/img_skill_work"
        android:layout_below="@+id/txt_novo"
        android:src="@drawable/chm_skillls_work"/>




    <TextView
        android:id="@+id/txtNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/chm_next_icon"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
